src/components/auto-suggest-box/index.scss
.auto-suggest-box {
  .react-autosuggest__container {
    position: relative;
  }

  .react-autosuggest__input {
    color: #000;
    font-weight: 300;
    font-size: 16px;
    border: 1px solid #aaa;
    border-radius: 4px;
  }

  .react-autosuggest__input--focused {
    outline: none;
  }

  .react-autosuggest__input--open {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }

  .react-autosuggest__suggestions-container {
    display: none;
  }

  .react-autosuggest__suggestions-container--open {
    display: block;
    position: absolute;
    top: 30px;
    right: 0;
    width: auto;
    min-width: 171px;
    border: 1px solid #aaa;
    background-color: #fff;
    color: #000;
    font-weight: 300;
    font-size: 16px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    max-height: 100px;
    overflow-y: auto;
    z-index: 2;
  }

  .react-autosuggest__suggestions-list {
    margin: 0;
    padding: 0;
    list-style-type: none;
  }

  .react-autosuggest__suggestion {
    cursor: pointer;
    padding: 10px 20px;
  }

  .react-autosuggest__suggestion--highlighted {
    background-color: #ddd;
  }

  .select:not(.is-multiple):not(.is-loading)::after,
  .select:not(.is-multiple):not(.is-loading)::after,
  .navbar-link:not(.is-arrowless)::after {
    display: none !important;
  }


  .loading {
    position: absolute;
    top: 13px;
    right: 20px;
    font-size: 25px;
  }
}

